# ml-instrumentation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dev-setup.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main_benchmark.yml  pr_benchmark.yml  pr_test.yml  style.yml
dev/bench/: data.js
ml_instrumentation/: Collector.py  Sampler.py  Writer.py  utils.py
ml_instrumentation/_utils/: sqlite.py
tests/: conftest.py  test_Collector.py  test_Writer.py
tests/acceptance/: test_Collector.py
tests/fixtures/: collector.py  writer.py
tests/integration/: test_Collector.py  test_Writer.py
tests/performance/: test_Collector.py
tests/unit/: test_Collector.py
